Refresh some files

--- a/ptimer.cfg
+++ b/ptimer.cfg
@@ -1,5 +1,5 @@
-c:/ptimer/de405.bin
-c:/ptimer/obsys.dat
-c:/primer/eop.dat
-c:/ptimer/clock/leap.sec
-c:/ptimer/clock/time.dat
+F:/YandexDisk/3.Programing/work/project_pulsar/ptimer_interface/de405.bin
+F:/YandexDisk/3.Programing/work/project_pulsar/ptimer_interface/obsys.dat
+F:/YandexDisk/3.Programing/work/project_pulsar/ptimer_interface/eop.dat
+F:/YandexDisk/3.Programing/work/project_pulsar/ptimer_interface/clock/leap.sec
+F:/YandexDisk/3.Programing/work/project_pulsar/ptimer_interface/clock/time.dat
