Add patam box and first step to ploting

--- a/test_run/ptimer.cfg
+++ b/test_run/ptimer.cfg
@@ -1,5 +1,5 @@
-F:/YandexDisk/3.Programing/work/project_pulsar/vizov/ptimer_interface/de405.bin
-F:/YandexDisk/3.Programing/work/project_pulsar/vizov/ptimer_interface/obsys.dat
-F:/YandexDisk/3.Programing/work/project_pulsar/vizov/ptimer_interface/eop.dat
-F:/YandexDisk/3.Programing/work/project_pulsar/vizov/ptimer_interface/leap.sec
-F:/YandexDisk/3.Programing/work/project_pulsar/vizov/ptimer_interface/clock/time.dat
+F:/ptimer_interface/de405.bin
+F:/ptimer_interface/obsys.dat
+F:/ptimer_interface/eop.dat
+F:/ptimer_interface/leap.sec
+F:/clock/time.dat
